# MegLevUKF

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: MagLevUKF.hpp  conversions.hpp  integration.hpp  maglevObject.hpp  maglevSystemDynamics.hpp  serialReader.hpp
src/: CMakeLists.txt  MagLevUKF.cpp  conversions.cpp  integration.cpp  maglevObject.cpp  maglevSystemDynamics.cpp  serialReader.cpp
